[package]
name = "avatar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
image = "0.24.7"
imageproc = "0.23.0"
rusttype = "0.9.3"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
