[package]
name = "avatar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
axum = "0.7.1"
image = "0.24.7"
imageproc = "0.23.0"
lazy_static = "1.4.0"
rusttype = "0.9.3"
thiserror = "1.0.52"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
